<resources>
    <string name="app_name">FPTCOMICAPP</string>
    <string name="error_missing_comic_id">Missing comic information.</string>
    <string name="error_comic_not_found">Comic not found.</string>
    <string name="label_author">Author: %1$s</string>
    <string name="label_unknown">Unknown</string>
    <string name="label_stats">Likes: %1$d   Views: %2$d   Chapters: %3$d</string>
    <string name="action_read_now">Read now</string>
    <string name="action_view_chapters">Chapter list</string>
    <string name="action_view_comments">Comments</string>
    <string name="action_manage_chapters">Manage chapters</string>
    <string name="content_description_comic_cover">Comic cover image</string>
    <string name="message_no_chapters">No chapters yet.</string>
    <string name="title_chapter_list">Chapters</string>
    <string name="error_missing_chapter_id">Missing chapter information.</string>
    <string name="error_chapter_not_found">Chapter not found.</string>
    <string name="error_chapter_no_pages">This chapter does not have any pages.</string>
    <string name="label_page_indicator">%1$d / %2$d</string>
    <string name="title_reader">Đọc truyện</string>
    <string name="content_description_page_image">Ảnh trang truyện</string>
    <string name="title_comments">Comments</string>
    <string name="hint_add_comment">Write a comment...</string>
    <string name="action_send">Send</string>
    <string name="error_comment_empty">Please enter a comment.</string>
    <string name="error_comment_requires_login">You need to sign in to comment.</string>
    <string name="message_comment_posted">Comment posted.</string>
    <string name="title_admin_chapter">Chapter admin - %1$s</string>
    <string name="action_create_chapter">Add chapter</string>
    <string name="title_add_chapter_short">Thêm chapter</string>
    <string name="title_edit_chapter_short">Edit chapter</string>
    <string name="action_create">Tạo</string>
    <string name="action_update">Update</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_clear">Xóa</string>
    <string name="action_pick_images">Chọn ảnh</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_invalid_number">Please enter a valid number.</string>
    <string name="error_select_images">Vui lòng chọn ảnh cho chapter.</string>
    <string name="message_chapter_created">Chapter created.</string>
    <string name="message_chapter_updated">Chapter updated.</string>
    <string name="message_chapter_deleted">Chapter deleted.</string>
    <string name="title_delete_chapter">Delete chapter</string>
    <string name="message_delete_chapter_confirm">Delete this chapter? This action cannot be undone.</string>
    <string name="title_select_images">Select pages</string>
    <string name="label_selected_images">Đã chọn %1$d ảnh</string>
    <string name="label_selected_images_existing">Currently %1$d images</string>
    <string name="label_selected_images_none">Chưa chọn ảnh nào</string>
    <string name="hint_chapter_title">Tên chapter</string>
    <string name="hint_chapter_index">Thứ tự chapter</string>
    <string name="helper_chapter_index">Nhập số thứ tự chapter (ví dụ: 1, 2, 3...)</string>
    <string name="tab_select_files">Chọn ảnh</string>
    <string name="tab_input_urls">Nhập link</string>
    <string name="tab_scrape_web">Lấy từ web</string>
    <string name="hint_image_urls">Nhập link ảnh (mỗi link một dòng)</string>
    <string name="helper_image_urls">Dán link ảnh từ web, Google Drive, v.v. Mỗi link một dòng</string>
    <string name="label_url_images_none">Chưa nhập link nào</string>
    <string name="label_url_images_count">Đã nhập %1$d link ảnh</string>
    <string name="error_invalid_url">Link không hợp lệ: %1$s</string>
    <string name="error_download_image">Không thể tải ảnh từ link: %1$s</string>
    <string name="message_downloading_images">Đang tải ảnh từ link...</string>
    <string name="hint_chapter_url">URL trang chapter</string>
    <string name="helper_chapter_url">Dán link trang chapter để tự động lấy tất cả ảnh</string>
    <string name="label_scrape_ready">Nhập URL trang chapter và nhấn nút bên dưới</string>
    <string name="label_scraping">Đang lấy ảnh từ trang web...</string>
    <string name="label_scraped_images">Đã tìm thấy %1$d ảnh</string>
    <string name="action_scrape_images">Lấy ảnh từ trang web</string>
    <string name="error_scrape_failed">Không thể lấy ảnh từ trang web. Vui lòng kiểm tra URL hoặc thử lại.</string>
    <string name="error_no_images_found">Không tìm thấy ảnh nào trong trang này</string>
    <string name="error_file_selection_not_available">Tính năng chọn ảnh từ thiết bị không khả dụng. Vui lòng dùng \'Nhập link\' hoặc \'Lấy từ web\'.</string>
    <string name="error_no_chapter_available">No chapter available to read yet.</string>
</resources>